--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,8 @@
 @import "reboot";
-
+@font-face {
+  font-family: CodePro; /* Имя шрифта */
+  src: url(../fonts/Code-Pro-Bold.ttf); /* Путь к файлу со шрифтом */
+}
 $red: #9c053c;
 $black: #1d1d1b;
 
@@ -26,20 +29,23 @@ header .top_header .logo{
 header  .top_menu{
   display: flex;
   justify-items: center;
+  align-items: center;
   list-style: none;
   background: $black;
   width: 100%;
   height: 100%;
+  min-height: 100px;
   padding: 0;
+  margin: 0;
 }
 header .top_menu li {
-  display: table;
+  display: flex;
+  align-items: center;
   min-height: 100px;
   margin-right: -20px;
   transition: all .1s ease-in;
 }
 header .top_menu li a{
-  display: table-cell;
   vertical-align: middle;
   color: #fff;
   text-decoration: none;
@@ -48,7 +54,156 @@ header .top_menu li a{
   font-size: 18px;
   padding-right: 30px;
   padding-left: 20px;
+  line-height: 100px;
 }
 header .top_menu li:hover{
   background: $red;
+}
+.header_center{
+  min-height: 800px;
+  width: 100%;
+  background: url("../img/bg-header.jpg")0 0 no-repeat;
+  background-size: 100% 100%;
+  position: relative;
+}
+.header_center .header_center_top{
+  position: absolute;
+  right: 21%;
+  top: 50px;
+  line-height: 1.2;
+}
+.header_center .header_center_top span{
+  text-transform: uppercase;
+  color: $red;
+  font-family: CodePro, monospace;
+  font-weight: bold;
+  font-size: 50px;
+}
+.header_center .header_center_top p{
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+}
+
+.header_center .header_center_bottom{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: -37px;
+  left: 0;
+  right: 0;
+  line-height: 1.2;
+  padding-bottom: 50px;
+}
+.header_center .header_center_bottom .proc{
+  font-family: CodePro, monospace;
+  font-weight: bold;
+  font-size: 150px;
+  color: $red;
+  margin-right: 16px;
+}
+.header_center .header_center_bottom .text1{
+  font-family: CodePro, monospace;
+  font-weight: bold;
+  font-size: 50px;
+}
+.header_center .header_center_bottom .text2{
+  font-family: CodePro, monospace;
+  font-weight: bold;
+  font-size: 50px;
+  color: $red;
+}
+.header_center .header_center_bottom .tel{
+  position: relative;
+  left: 150px;
+}
+.header_center .header_center_bottom .tel a{
+  background: $red;
+  padding: 20px 40px;
+  padding-left: 70px;
+  margin-left: 20px;
+  border-radius: 30px;
+  color: #fff;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 200;
+  font-size: 18px;
+  text-transform: uppercase;
+  position: relative;
+}
+.header_center .header_center_bottom .tel a:before{
+  content: '';
+  background: url("../img/call.png")0 0 no-repeat;
+  background-size: cover;
+  display: block;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  top: -5px;
+
+}
+
+.block1{
+  background: $black;
+  padding: 50px 0;
+}
+.block1 h2{
+  color: #fff;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 800;
+  font-size: 40px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 2px;
+  margin-bottom: 50px;
+}
+.block1 .carusel1 .item h4{
+  color: #fff;
+  text-align: center;
+  font-family: CodePro, monospace;
+  font-weight: bold;
+  font-size: 18px;
+  letter-spacing: 1.2px;
+}
+.block1 .carusel1 .item {
+  width: 500px;
+  height: 400px;
+}
+.block1 .carusel1 .item:before{
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(29, 29, 27, 0.62);
+
+}
+.block1 .carusel1 .owl-item.active.center .item:before{
+  background: rgba(29, 29, 27, 0);
+}
+
+.block1 .carusel1  .owl-dots.disabled{
+  display: block!important;
+  margin-top: 40px;
+
+}
+.block1 .carusel1  .owl-dots{
+  margin-top: 40px;
+}
+.owl-theme .owl-dots .owl-dot{
+  outline: none;
+}
+.block1 .carusel1  .owl-dots span{
+  width: 30px;
+  background: #6f6f6f;
+  border-radius: 0;
+}
+.block1 .carusel1  .owl-dots .owl-dot.active span{
+  background: $red;
+}
+.fack{
+  width: 100vw;
+  height: 100vh;
+  background: #6c757d;
 }
