--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,12 +6,123 @@
 $red: #9c053c;
 $black: #1d1d1b;
 
+body{
+  position: relative;
+}
 .wrapper{
   max-width: 1210px;
   margin: auto;
   padding: 0 20px;
 }
+.nav-icon-line{
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.nav-icon-line #nav-text-in{
+  margin-left: 63px;
+  position: relative;
+  top: 11px;
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 19px;
+  float: left;
+}
+#nav-icon{
+  float: left;
+  display: none;
+  width: 31px;
+  height: 30px;
+  border-radius: 4px;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+#nav-icon span {
+  display: block;
+  position: absolute;
+  height: 1px;
+  width: 75%;
+  background: #fff;
+  border-radius: 9px;
+  opacity: 1;
+  margin: auto;
+  left: 0;
+  right: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
 
+
+
+/* Icon 3 */
+
+#nav-icon span:nth-child(1) {
+  top: 7px;
+}
+
+#nav-icon span:nth-child(2),#nav-icon span:nth-child(3) {
+  top: 16px;
+}
+
+#nav-icon span:nth-child(4) {
+  top: 25px;
+}
+
+.open{
+  z-index: 999999;
+  top: 27px;
+  right: 47px;
+}
+
+#nav-icon.open span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+.opener{
+  display: flex!important;
+  max-height: 500px!important;
+  transition: max-height 1s ease;
+  overflow: hidden;
+  width: 100%;
+}
+#nav-icon.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+.nav-icon-line{
+  display: none;
+}
 header .top_header {
   display: flex;
   justify-content: space-between;
@@ -116,7 +227,7 @@ header .top_menu li:hover{
 }
 .header_center .header_center_bottom .tel{
   position: relative;
-  left: 150px;
+  left: 124px;
 }
 .header_center .header_center_bottom .tel a{
   background: $red;
@@ -202,8 +313,261 @@ header .top_menu li:hover{
 .block1 .carusel1  .owl-dots .owl-dot.active span{
   background: $red;
 }
+.block2 .row{
+  min-height: 500px;
+  display: flex;
+}
+.block2 .row .bg{
+  background-size: cover;
+  width: 50%;
+  height: initial;
+  position: relative;
+}
+.block2 .row .block2_item1{
+  background: url("../img/block2/foto1.png")0 0 no-repeat;
+}
+.block2 .row .block2_item2{
+  background: url("../img/block2/2.png")0 0 no-repeat;
+}
+.block2 .row .block2_item3{
+  background: url("../img/block2/3.png")0 0 no-repeat;
+}
+
+.block2 .row .block2_item4{
+  background: url("../img/block2/4.png")0 0 no-repeat;
+}
+
+.block2 .row span{
+  position: absolute;
+  background: red;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background: rgba(47, 46, 46, 0.61);
+}
 .fack{
   width: 100vw;
   height: 100vh;
   background: #6c757d;
+}
+.show-480px{
+  display: none;
+}
+/*==========  Desktop First Method  ==========*/
+
+/* Large Devices, Wide Screens */
+@media only screen and (max-width : 1400px) {
+  header .top_header .logo{
+    margin-left: 4%;
+  }
+  .header_center .header_center_bottom .tel{
+    left: 0;
+  }
+  .header_center .header_center_bottom .proc{
+    font-size: 100px;
+  }
+  .header_center .header_center_bottom .text1,.header_center .header_center_bottom .text2{
+    font-size: 40px;
+  }
+  header .top_menu li a{
+    font-size: 15px;
+  }
+}
+
+@media only screen and (max-width : 1200px){
+  header .top_header .logo{
+    width: 130px;
+    height: 36px;
+    margin-left: 10px;
+  }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (max-width : 992px) {
+  body{
+    padding-top: 70px;
+  }
+  header .top_header .logo{
+    display: none;
+  }
+  .header_center .header_center_bottom .tel{
+    position: fixed;
+    bottom: 45px;
+    right: 15px;
+    left: initial;
+    z-index: 50;
+  }
+  .header_center .header_center_top{
+    right: 0%;
+    left: 0;
+    top: 0;
+    padding-top: 20px;
+    background: url("../img/header-text.png") 0 0 no-repeat;
+    background-size: 100% 100%;
+    text-align: center;
+    margin-top: -100px;
+  }
+  .header_center .header_center_top p{
+    font-size: 25px;
+  }
+  .header_center{
+    min-height: 500px;
+    margin-top: 100px;
+  }
+  .wr{
+    margin: -15px 0;
+    background: #9c053c;
+    height: 86px;
+    width: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #nav-icon{
+    display: block;
+
+  }
+  .nav-icon-line{
+    display: flex;
+    padding: 15px 0px;
+    background: $black;
+    position: fixed;
+    top: 0;
+    z-index: 99999999;
+  }
+  header .top_header{
+    min-height: inherit;
+  }
+  header .top_menu{
+    flex-direction: column;
+    position: fixed;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+    margin-top: 56px;
+    z-index: 99999;
+    overflow: hidden;
+    transition: all .4s;
+    min-height: inherit;
+    max-height: 0;
+    background: $red;
+  }
+
+  header .top_menu li{
+    min-height: inherit;
+  }
+  header .top_menu li a{
+    text-transform: uppercase;
+    font-weight: 900;
+    letter-spacing: 1.5px;
+    line-height: 40px;
+  }
+  header .nav-icon-line .menu_mob{
+    margin: auto;
+    text-align: right;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    left: -34px;
+    position: relative;
+  }
+  header .nav-icon-line .menu_mob .tel{
+    color: #fff;
+    font-family: CodePro, monospace;
+    font-weight: bold;
+    font-size: 18px;
+  }
+  header .nav-icon-line .menu_mob p{
+    color: #fff;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    margin: 0;
+  }
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 768px) {
+
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 480px) {
+  .hide-in-480{
+    display: none;
+  }
+  .show-480px{
+    display: block;
+  }
+  .header_center .header_center_top span{
+    font-size: 25px;
+  }
+  .header_center .header_center_top p{
+    font-size: 19px;
+  }
+  .header_center .header_center_bottom .proc{
+    font-size: 60px;
+    width: 34%;
+  }
+  .header_center .header_center_bottom .text{
+    width: 40%;
+  }
+  .header_center .header_center_bottom{
+    flex-flow:row wrap;
+  }
+  .header_center .header_center_bottom .text1, .header_center .header_center_bottom .text2 {
+    font-size: 26px;
+  }
+  .header_center {
+    min-height: 280px;
+    margin-top: 100px;
+    background: url(../img/header-mob.png)0 0 no-repeat;
+    background-size: 100% 100%;
+  }
+  .header_center .header_center_top {
+    background-size: 100% 68%;
+    height: 100%;
+  }
+  header .nav-icon-line .menu_mob{
+    left: initial;
+  }
+}
+
+/* Custom, iPhone Retina */
+@media only screen and (max-width : 320px) {
+
+}
+
+
+/*==========  Mobile First Method  ==========*/
+
+/* Custom, iPhone Retina */
+@media only screen and (min-width : 320px) {
+
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width : 480px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+
+}
+
+ /* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
+
 }
