--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,8 @@ $black: #1d1d1b;
 body{
   position: relative;
   overflow-x: hidden;
+  max-width: 1920px;
+  margin: auto;
 }
 .wrapper{
   max-width: 1210px;
@@ -255,7 +257,7 @@ header .top_menu li:hover{
   width: 80px;
   height: 80px;
   position: absolute;
-  top: -5px;
+  top: -10px;
 
 }
 
@@ -524,9 +526,10 @@ header .top_menu li:hover{
 
 .block5 {
   background: $black;
+  padding-bottom: 30px;
 }
 .block5 h2{
- color: #fff;
+  color: #fff;
   text-align: left;
   width: 1200px;
   font-family: CodePro,sans-serif;
@@ -614,6 +617,68 @@ header .top_menu li:hover{
   top: -12px;
   left: -28px;
 }
+.block6 {
+  background: #efefef;
+}
+.block6 .row{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  width: 1200px;
+  margin: auto;
+}
+.block6 .row > img{
+  width: 476px;
+  height: 127px;
+  margin: auto;
+  margin-bottom: 35px;
+}
+.block6 .row .wrap{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.block6 .row .wrap .block6_item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 31%;
+}
+.block6 .row .wrap .block6_item span{
+  color: $red;
+  font-family: CodeProL,sans-serif;
+  font-size: 70px;
+  font-weight: 900;
+}
+.block6 .row .wrap .block6_item p{
+  font-family: "Fira Sans", sans-serif;
+  font-size: 20px;
+  text-align: center;
+}
+.block6 h2{
+  color: $red;
+  text-align: left;
+  font-family: CodePro,sans-serif;
+  font-size: 40px;
+  font-weight: 900;
+  position: relative;
+  padding-left: 50px;
+  letter-spacing: 1.2px;
+  margin-top: 50px;
+  margin-bottom: 60px;
+}
+.block6 h2:before{
+  content: "";
+  width: 70px;
+  height: 4px;
+  position: absolute;
+  display: block;
+  background: $black;
+  top: 50%;
+  left: -40px;
+}
 /*==========  Desktop First Method  ==========*/
 
 /* Large Devices, Wide Screens */
@@ -638,6 +703,10 @@ header .top_menu li:hover{
   }
   .block5 .block5_item{
     width: 31%;
+  }
+  .block6 h2:before{
+    left: -16px;
+    width: 49px;
   }
 }
 
@@ -680,6 +749,10 @@ header .top_menu li:hover{
   }
   .block5 h2{
     width: 100%;
+  }
+  .block6 .row{
+    width: 100%;
+    padding: 0 40px;
   }
 }
 
@@ -933,6 +1006,27 @@ header .top_menu li:hover{
     left: 50%;
     transform: translate(-40%);
   }
+  .block6 .row .wrap{
+    flex-direction: column;
+    align-items: center;
+  }
+  .block6 h2{
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+  }
+  .block6 h2:before {
+    left: 50%;
+    width: 66px;
+    top: 106%;
+    transform: translate(-50%);
+  }
+  .block6 .row .wrap .block6_item{
+    width: 100%;
+  }
+  .block6 .row>img{
+    width: 428px;
+  }
 }
 
 /* Extra Small Devices, Phones */
@@ -996,6 +1090,12 @@ header .top_menu li:hover{
   .block5 h2{
     font-size: 20px;
     padding-left: 0;
+  }
+  .block6 .row>img{
+    width: 100%;
+  }
+  .block6 h2{
+    font-size: 25px;
   }
 }
 
