--- a/sass/main.scss
+++ b/sass/main.scss
@@ -679,6 +679,71 @@ header .top_menu li:hover{
   top: 50%;
   left: -40px;
 }
+.block7 .row{
+  display: flex;
+}
+.block7 .row .block7_item{
+  width: 50%;
+}
+.block7 .row .block7_item.left{
+  padding-left: 20%;
+}
+.block7_item img{
+  width: 100%;
+  height: 100%;
+}
+.block7 h2{
+  color: $red;
+  text-align: left;
+  font-family: CodePro,sans-serif;
+  font-size: 40px;
+  font-weight: 900;
+  position: relative;
+  padding-left: 50px;
+  letter-spacing: 1.2px;
+  margin-top: 50px;
+  margin-bottom: 40px;
+}
+.block7 h2:before{
+  content: "";
+  width: 70px;
+  height: 4px;
+  position: absolute;
+  display: block;
+  background: $black;
+  top: 50%;
+  left: -40px;
+}
+.block7 h2:after{
+  content: "безопасность";
+  position: absolute;
+  top: -30px;
+  left: 76px;
+  font-size: 50px;
+  color: #000;
+  z-index: -1;
+  opacity: .1;
+  font-family: "Fira Code Light",sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+.block7 .row .block7_item.left ul li span {
+  color: $black;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 400;
+  letter-spacing: 1.2px;
+}
+.block7 .row ul li {
+  color: #9c053c;
+  list-style-type: square;
+}
+.block7 .row .block7_item.left > span{
+  color: $black;
+  font-family: CodeProL ,sans-serif;
+  font-weight: 400;
+  font-size: 25px;
+  padding-left: 30px;
+}
 /*==========  Desktop First Method  ==========*/
 
 /* Large Devices, Wide Screens */
@@ -707,6 +772,13 @@ header .top_menu li:hover{
   .block6 h2:before{
     left: -16px;
     width: 49px;
+  }
+  .block7 .row .block7_item.left{
+    padding-left: 15px;
+  }
+  .block7 h2:before{
+    width: 38px;
+    left: 6px;
   }
 }
 
@@ -947,6 +1019,14 @@ header .top_menu li:hover{
   .block4 .row{
     height: 336px;
   }
+  .block7 .row{
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+  }
+  .block7 .row .block7_item.left{
+    order: 2;
+  }
 }
 
 /* Small Devices, Tablets */
@@ -1006,6 +1086,9 @@ header .top_menu li:hover{
     left: 50%;
     transform: translate(-40%);
   }
+  .block6{
+    padding-bottom: 30px;
+  }
   .block6 .row .wrap{
     flex-direction: column;
     align-items: center;
@@ -1026,6 +1109,26 @@ header .top_menu li:hover{
   }
   .block6 .row>img{
     width: 428px;
+  }
+  .block7 .row .block7_item{
+    width: auto;
+  }
+  .block7 .row{
+    padding-top: 0;
+  }
+  .block7 h2:after {
+    display: none;
+  }
+  .block7 h2{
+    margin:16px 0;
+    padding: 0;
+    text-align: center;
+  }
+  .block7 h2:before {
+    width: 55px;
+    left: 50%;
+    top: 110%;
+    transform: translate(-50%);
   }
 }
 
@@ -1096,6 +1199,20 @@ header .top_menu li:hover{
   }
   .block6 h2{
     font-size: 25px;
+  }
+  .block7 .row .block7_item.left>span{
+    display: block;
+    margin: auto;
+    text-align: center;
+    font-size: 20px;
+    margin: 20px 0;
+    padding-left: 0;
+  }
+  .block7 h2{
+    font-size: 25px;
+  }
+  .block7 .row .block7_item.left{
+    padding-left: 0;
   }
 }
 
